--- a/privacy.html
+++ b/privacy.html
@@ -3,85 +3,54 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#0b0f13" />
-  <title>Privacy Policy — BRBRT</title>
-  <meta name="description" content="BRBRT Privacy Policy" />
-  <link rel="canonical" href="https://brbrt.com/privacy.html" />
+  <meta name="theme-color" content="#07110D" />
+  <title>BRBRT — Privacy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <canvas id="fxCanvas" aria-hidden="true"></canvas>
-
-  <header class="topbar">
-    <div class="topbar__inner">
-      <a class="brand" href="index.html"><span class="brand__dot"></span><span class="brand__name">BRBRT</span></a>
-      <nav class="nav" id="nav">
-        <a class="nav__link" href="index.html">Home</a>
-        <a class="nav__link" href="whitepaper.html">Whitepaper</a>
-        <a class="nav__link" href="association.html">Association</a>
-      </nav>
-      <div class="topbar__actions">
-        <button class="btn btn--ghost btn--sm" id="trailerBtn" type="button" aria-pressed="true"><span class="icon">🎬</span> Trailer</button>
-        <button class="btn btn--ghost btn--sm" id="soundBtn" type="button" aria-pressed="false"><span class="icon" id="soundIcon">🔇</span><span id="soundLabel">Sound</span></button>
-        <button class="burger" id="burger" aria-label="Open menu" aria-expanded="false" type="button"><span></span><span></span><span></span></button>
+  <header class="nav">
+    <div class="nav__inner">
+      <a class="brand" href="index.html">
+        <span class="brand__mark" aria-hidden="true"></span>
+        <span class="brand__name">BRBRT</span>
+      </a>
+      <div class="nav__actions">
+        <a class="btn btn--ghost" href="index.html">Home</a>
       </div>
     </div>
   </header>
 
-  <main class="page container">
+  <main style="padding-top:92px">
     <section class="section">
-      <div class="section__head reveal">
-        <div class="section__kicker">LEGAL</div>
-        <h1 class="section__title">Privacy Policy</h1>
-        <p class="section__subtitle">This is a lightweight privacy policy for a static informational website.</p>
-      </div>
+      <div class="container">
+        <div class="card">
+          <h2>Privacy Policy</h2>
+          <p class="muted">
+            This website is a static informational site. We do not intentionally collect personal data.
+            Some hosting providers may log basic technical data (e.g., IP address, browser type) for security and analytics.
+          </p>
 
-      <div class="card glass reveal">
-        <h2 class="card__titleSm">Data we collect</h2>
-        <p class="card__text">
-          This website does not run a server-side database and does not require user accounts.
-          If you contact us via email, your email provider will process that communication.
-        </p>
+          <h3>Cookies</h3>
+          <p class="muted">
+            This site does not set tracking cookies by default.
+          </p>
 
-        <h2 class="card__titleSm">Cookies</h2>
-        <p class="card__text">
-          The website may store local preferences (e.g., sound/trailer toggles) using <code>localStorage</code>.
-          These preferences remain on your device.
-        </p>
+          <h3>Third-Party Links</h3>
+          <p class="muted">
+            This site links to third-party services (PancakeSwap, BscScan, PinkSale, Linktree). Their policies apply.
+          </p>
 
-        <h2 class="card__titleSm">Third-party links</h2>
-        <p class="card__text">
-          External services (BscScan, PancakeSwap, Linktree, SolidityScan) operate under their own privacy policies.
-        </p>
+          <h3>Contact</h3>
+          <p class="mono">contact@brbrt.com</p>
 
-        <h2 class="card__titleSm">Contact</h2>
-        <p class="card__text">
-          Official email: <strong>contact@brbrt.com</strong>
-        </p>
-      </div>
-
-      <div class="row reveal">
-        <a class="btn btn--primary" href="index.html">← Back to Home</a>
-        <a class="btn btn--ghost" href="terms.html">Terms</a>
+          <p class="muted small">Last updated: <span id="privacyDate"></span></p>
+        </div>
       </div>
     </section>
   </main>
 
-  <footer class="footer">
-    <div class="container footer__inner">
-      <div>
-        <div class="footer__brand"><span class="brand__dot"></span><strong>BRBRT</strong></div>
-        <div class="footer__muted">Global Youth. Global Hope.</div>
-      </div>
-      <div class="footer__links">
-        <a href="terms.html">Terms</a>
-        <a href="index.html#contact">Contact</a>
-      </div>
-      <div class="footer__muted">© <span id="year"></span>BRBRT. All rights reserved.</div>
-    </div>
-  </footer>
-
-  <div class="toast" id="toast" role="status" aria-live="polite"></div>
-  <script src="script.js"></script>
+  <script>
+    document.getElementById("privacyDate").textContent = new Date().toISOString().slice(0,10);
+  </script>
 </body>
 </html>
