--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <a href="#roadmap">Roadmap</a>
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
+         <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer">X ↗</a>
+  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram ↗</a>
+  <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
       </nav>
 
       <div class="nav__actions">
@@ -72,6 +75,10 @@
         <a href="association.html">Association</a>
         <a href="#contact">Contact</a>
         <a class="mobile__cta" href="#buy">How to Buy</a>
+         <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer" class="drawerLink">X (Twitter)</a>
+  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
+  <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer" class="drawerLink">Linktree</a>
+  <a href="mailto:contact@brbrt.com" class="drawerLink">contact@brbrt.com</a>
       </div>
     </div>
   </header>
