--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <a href="#roadmap">Roadmap</a>
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
-        <a href="#contact">Contact</a>
         <a class="mobile__cta" href="#buy">How to Buy</a>
          <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer" class="drawerLink">X (Twitter)</a>
   <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
@@ -402,13 +401,11 @@
 
         <div class="footer__right">
           <div class="footer__links">
-            <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree ↗</a>
-            <a href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan ↗</a>
-            <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap ↗</a>
+            <a href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan </a>
+            <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap </a>
+             <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree </a>
              <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer">X</a>
   <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
-  <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
-  <a href="mailto:contact@brbrt.com">Email</a>
           </div>
 
           <div class="footer__legal">
