--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <a href="#roadmap">Roadmap</a>
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
-         <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer">X ↗</a>
-  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram ↗</a>
+         <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer">X </a>
+  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram </a>
   <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
       </nav>
 
@@ -56,7 +56,7 @@
 
         <a class="btn btn--primary" href="#buy" aria-label="How to buy">
           <span class="btn__text">How to Buy</span>
-          <span class="btn__icon" aria-hidden="true">↗</span>
+          <span class="btn__icon" aria-hidden="true"></span>
         </a>
 
         <button id="menuBtn" class="hamburger" type="button" aria-label="Open menu" aria-expanded="false">
