--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       <div class="container footer__inner">
         <div class="footer__left">
           <div class="footer__brand">
-            <img src="assets/BRBR_256x256.png" alt="BRBRT logo" width="44" height="44" loading="lazy" />
+            <img src="assets/logo BRBRT.png" alt="BRBRT logo" width="44" height="44" loading="lazy" />
             <div>
               <div class="footer__name">BRBRT</div>
               <div class="footer__tag">Strength • Dignity • Awareness</div>
