--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- HERO -->
   <main id="top">
     <section class="hero">
-      <video class="hero__video" autoplay muted playsinline loop preload="metadata" poster="assets/BRBR_256x256.png">
+      <video class="hero__video" autoplay muted playsinline loop preload="metadata" poster="assets/logo BRBRT.png">
         <source src="assets/hero-web.mp4" type="video/mp4" />
       </video>
       <div class="hero__overlay"></div>
