--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#07110D" />
+  <img src="assets/logo BRBRT.png" alt="BRBRT logo" width="44" height="44" loading="lazy" />
 
   <title>BRBRT — Strength • Dignity • Awareness (BNB Chain)</title>
   <meta name="description" content="BRBRT is a community-driven meme token on BNB Chain inspired by a real story of bullying, resilience and personal growth. Transparency-first. No promises of profit. NFA." />
