--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="A community-driven meme token on BNB Chain. Transparency-first. No promises of profit. NFA." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://brbrt.com" />
-  <meta property="og:image" content="https://brbrt.com/assets/BRBR_256x256.png" />
+  <meta property="og:image" content="https://brbrt.com/assets/logo BRBRT.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -43,7 +43,7 @@
         <a href="#roadmap">Roadmap</a>
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
-         <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer">X </a>
+         <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X </a>
   <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram </a>
   <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
       </nav>
@@ -74,7 +74,7 @@
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
         <a class="mobile__cta" href="#buy">How to Buy</a>
-         <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer" class="drawerLink">X (Twitter)</a>
+         <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer" class="drawerLink">X (Twitter)</a>
   <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
   <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer" class="drawerLink">Linktree</a>
   <a href="mailto:contact@brbrt.com" class="drawerLink">contact@brbrt.com</a>
@@ -404,7 +404,7 @@
             <a href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan </a>
             <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap </a>
              <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree </a>
-             <a href="https://x.com/BRBR_2026" target="_blank" rel="noreferrer">X</a>
+             <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
   <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
           </div>
 
