--- a/index.html
+++ b/index.html
@@ -421,6 +421,6 @@
     </footer>
   </main>
 
-  <script defer src="script.js"></script>
+  <script  src="script.js" defer></script>
 </body>
 </html>
