--- a/index.html
+++ b/index.html
@@ -2,23 +2,71 @@
 <html lang="en">
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#07110D" />
 
-  <title>BRBRT — Strength • Dignity • Awareness (BNB Chain)</title>
+  <title>BRBRT Crypto Project - Strength • Dignity • Awareness (BNB Chain)</title>
   <meta name="description" content="BRBRT is a community-driven meme token on BNB Chain inspired by a real story of bullying, resilience and personal growth. Transparency-first. No promises of profit. NFA." />
+
+  <!-- Canonical + Robots -->
+  <link rel="canonical" href="https://brbrt.com/" />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="BRBRT — Strength • Dignity • Awareness" />
   <meta property="og:description" content="A community-driven meme token on BNB Chain. Transparency-first. No promises of profit. NFA." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://brbrt.com" />
-  <meta property="og:image" content="https://brbrt.com/assets/logo BRBRT.png" />
+  <meta property="og:url" content="https://brbrt.com/" />
+  <meta property="og:site_name" content="BRBRT" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image" content="https://brbrt.com/assets/logo%20BRBRT.png" />
+  <meta property="og:image:alt" content="BRBRT – Strength • Dignity • Awareness" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BRBRT Crypto Project – Strength • Dignity • Awareness (BNB Chain)" />
+  <meta name="twitter:description" content="BRBRT is a community-driven meme token on BNB Chain inspired by a real story of bullying, resilience and purpose. Transparency-first. NFA." />
+  <meta name="twitter:image" content="https://brbrt.com/assets/logo%20BRBRT.png" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://brbrt.com/#organization",
+        "name": "BRBRT",
+        "url": "https://brbrt.com/",
+        "logo": "https://brbrt.com/assets/logo%20BRBRT.png",
+        "sameAs": [
+          "https://x.com/_BRBRT_",
+          "https://www.instagram.com/_brbrt_/",
+          "https://linktr.ee/BRBRT"
+        ]
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://brbrt.com/#website",
+        "url": "https://brbrt.com/",
+        "name": "BRBRT",
+        "publisher": { "@id": "https://brbrt.com/#organization" },
+        "inLanguage": "en"
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://brbrt.com/#webpage",
+        "url": "https://brbrt.com/",
+        "name": "BRBRT Crypto Project - Strength • Dignity • Awareness (BNB Chain)",
+        "isPartOf": { "@id": "https://brbrt.com/#website" },
+        "about": { "@id": "https://brbrt.com/#organization" },
+        "inLanguage": "en"
+      }
+    ]
+  }
+  </script>
 
   <link rel="preload" href="assets/hero-web.mp4" as="video" type="video/mp4" />
   <link rel="preload" href="assets/logo-web.mp4" as="video" type="video/mp4" />
@@ -45,9 +93,9 @@
         <a href="#roadmap">Roadmap</a>
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
-         <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X </a>
-  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram </a>
-  <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
+        <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
+        <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
+        <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
       </nav>
 
       <div class="nav__actions">
@@ -76,10 +124,10 @@
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
         <a class="mobile__cta" href="#buy">How to Buy</a>
-         <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer" class="drawerLink">X (Twitter)</a>
-  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
-  <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer" class="drawerLink">Linktree</a>
-  <a href="mailto:contact@brbrt.com" class="drawerLink">contact@brbrt.com</a>
+        <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer" class="drawerLink">X (Twitter)</a>
+        <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
+        <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer" class="drawerLink">Linktree</a>
+        <a href="mailto:contact@brbrt.com" class="drawerLink">contact@brbrt.com</a>
       </div>
     </div>
   </header>
@@ -87,7 +135,7 @@
   <!-- HERO -->
   <main id="top">
     <section class="hero">
-      <video class="hero__video" autoplay muted playsinline loop preload="metadata" poster="assets/logo BRBRT.png">
+      <video class="hero__video" autoplay muted playsinline loop preload="metadata" poster="assets/logo%20BRBRT.png">
         <source src="assets/hero-web.mp4" type="video/mp4" />
       </video>
       <div class="hero__overlay"></div>
@@ -388,7 +436,7 @@
       <div class="container footer__inner">
         <div class="footer__left">
           <div class="footer__brand">
-            <img src="assets/logo BRBRT.png" alt="BRBRT logo" width="32" height="32" loading="lazy" />
+            <img src="assets/logo%20BRBRT.png" alt="BRBRT logo" width="32" height="32" loading="lazy" />
             <div>
               <div class="footer__name">BRBRT</div>
               <div class="footer__tag">Strength • Dignity • Awareness</div>
@@ -396,18 +444,18 @@
           </div>
 
           <p class="footer__small muted">
-            © <span id="year"></span> BRBRT. All rights reserved.  
+            © <span id="year"></span> BRBRT. All rights reserved.
             This site is informational only. No financial advice.
           </p>
         </div>
 
         <div class="footer__right">
           <div class="footer__links">
-            <a href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan </a>
-            <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap </a>
-             <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree </a>
-             <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
-  <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
+            <a href="https://bscscan.com/token/0xf97522ABEf762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan</a>
+            <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap</a>
+            <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree</a>
+            <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
+            <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
           </div>
 
           <div class="footer__legal">
@@ -423,6 +471,6 @@
     </footer>
   </main>
 
-  <script  src="script.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
