--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
 
 <body>
   <!-- Background FX Canvas -->
+  <!-- GLOBAL BACKGROUND VIDEO (full page) -->
+<video
+  id="bgVideo"
+  class="bgVideo"
+  autoplay
+  muted
+  playsinline
+  loop
+  preload="metadata"
+  aria-hidden="true"
+>
+  <source src="assets/hero-web.mp4" type="video/mp4" />
+</video>
+<div class="bgOverlay" aria-hidden="true"></div>
   <canvas id="fx" aria-hidden="true"></canvas>
 
   <!-- NAV -->
