--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#07110D" />
+  <!-- ===== FAVICON / SITE ICON ===== -->
+<link rel="icon" type="image/png" href="/assets/logo%20BRBRT.png">
+<link rel="apple-touch-icon" href="/assets/logo%20BRBRT.png">
+
+<meta name="msapplication-TileColor" content="#07110D">
+<meta name="theme-color" content="#07110D">
+
 
   <title>BRBRT Crypto Project - Strength • Dignity • Awareness (BNB Chain)</title>
   <meta name="description" content="BRBRT is a community-driven meme token on BNB Chain inspired by a real story of bullying, resilience and personal growth. Transparency-first. No promises of profit. NFA." />
